# pb_automation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: schedule-run.yml
scripts/: run.py
src/pb_automation/: auto.py
